@@ -112,6 +112,9 @@ Release 2.0.5-beta - UNRELEASED
     FileOuputFormat.Counter for binary compatibility with 1.x mapred APIs.
     (Mayank Bansal via vinodkv)
 
+    MAPREDUCE-5176. Add annotation for tagging tasks as responsive to
+    preemption. (Carlo Curino, cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-4974. Optimising the LineRecordReader initialize() method 
